preventing page "jumping"

--- a/sources/scss/style.scss
+++ b/sources/scss/style.scss
@@ -27,9 +27,9 @@ body {
   min-height: 100%;
   color: #000;
   text-rendering: optimizeLegibility;
-  overflow-x: hidden;
+  overflow-y: scroll;
   background: #d6d6d6;
-  background: linear-gradient(to bottom, #d6d6d6 0%, #f6f6f6 50%, #c3c3c3 100%);
+  // background: linear-gradient(to bottom, #d6d6d6 0%, #f6f6f6 50%, #c3c3c3 100%);
   background-attachment: fixed;
 }
 
@@ -86,7 +86,7 @@ input[type="text"] {
   z-index: 1;
   padding: 10px;
   height: 70px;
-  box-shadow: 0 4px 15px -4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 15px -4px rgba($black, 0.2);
   background: $white;
 
   input {
@@ -108,7 +108,7 @@ input[type="text"] {
   position: relative;
   border: 1px solid lighten($color-gray, 50%);
   background-color: $white;
-  box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 6px -4px rgba($black, 0.2);
   border-radius: 5px;
   margin-left: 25px;
   transition: all 100ms;
@@ -126,7 +126,7 @@ input[type="text"] {
     border-radius: 50%;
     border: 2px solid $white;
     transition: all 100ms;
-    box-shadow: inset 0 2px 2px 0 rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 2px 2px 0 rgba($black, 0.6);
   }
 
   &:hover::before {
